# message

./: .gitignore  CHANGELOG.md  build.sh  modelyz-message.cabal  sync-from-archive.sh  sync-to-archive.sh
src/: Configuration.hs  Connection.hs  Expression.hs  Flow.hs  Message.hs  MessageFlow.hs  MessageId.hs  Metadata.hs  Payload.hs  ResourceType.hs  Scope.hs  Service.hs  Tree.hs  Type.hs
src/Agent/: Agent.hs
src/AgentType/: AgentType.hs
src/Commitment/: Commitment.hs
src/CommitmentType/: CommitmentType.hs
src/Configuration/: Zone.hs
src/Configuration/Zone/: Fragment.hs
src/Contract/: Contract.hs
src/ContractType/: ContractType.hs
src/Event/: Event.hs
src/EventType/: EventType.hs
src/Expression/: Binary.hs  Deeplink.hs  HardLink.hs  Observable.hs  Unary.hs  ValueSelection.hs
src/Group/: Group.hs  Link.hs
src/GroupType/: GroupType.hs
src/Ident/: Fragment.hs  Identification.hs  Identifier.hs  IdentifierType.hs
src/Process/: Process.hs  Reconcile.hs
src/ProcessType/: ProcessType.hs
src/Resource/: Resource.hs
src/ResourceType/: ResourceType.hs
src/Value/: Value.hs  ValueType.hs
